--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/jessburnett/tdd-js-tabs#readme",
   "devDependencies": {
     "jake": "^8.0.15",
-    "semver": "^5.5.0"
+    "jshint": "^2.9.5",
+    "semver": "^5.5.0",
+    "simplebuild-jshint": "^1.3.0"
   }
 }
