--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "how-to-tabs",
+  "name": "ts-td-js",
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "0.12.4"
+    "node": "8.9.4"
   },
   "description": "test driven js - automated build",
   "main": "Jakefile.js",
@@ -21,8 +21,12 @@
   },
   "homepage": "https://github.com/jessburnett/tdd-js-tabs#readme",
   "devDependencies": {
+    "chai": "^4.1.2",
+    "farm": "^2.0.5",
+    "http-server": "^0.11.1",
     "jake": "^8.0.15",
     "jshint": "^2.9.5",
+    "mocha": "^5.0.1",
     "semver": "^5.5.0",
     "simplebuild-jshint": "^1.3.0"
   }
