--- a/package.json
+++ b/package.json
@@ -23,11 +23,17 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "farm": "^2.0.5",
+    "first": "0.0.3",
     "http-server": "^0.11.1",
     "jake": "^8.0.15",
     "jshint": "^2.9.5",
     "karma": "^2.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-edge-launcher": "^0.4.2",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "^1.3.0",
+    "karma-opera-launcher": "^1.0.0",
+    "karma-safari-launcher": "^1.0.0",
     "mocha": "^5.0.1",
     "semver": "^5.5.0",
     "simplebuild-jshint": "^1.3.0",
